# samples

./: README.md
demos/hello-cljs-react/: .gitignore  README.md  package.json  shadow-cljs.edn
demos/hello-cljs-react/public/: index.html
demos/hello-cljs-react/src/app/: components.cljs  main.cljs  polyfill.js
demos/hello-react/: package-lock.json
demos/hello-vue/: README.md  package-lock.json  package.json  vue.config.js
demos/hello-vue-stylesheet-loader/: README.md  package-lock.json  package.json  vue.config.js
demos/hello-vue-stylesheet-loader/src/: App.inline.css  App.vue  polyfill.js
demos/hello-vue-stylesheet-loader/src/components/: HelloWorld.inline.css  HelloWorld.vue
demos/hello-vue-stylesheet-loader/src/views/: kraken.vue  vue.inline.css  vue.vue
demos/hello-vue-vite/: README.md  index.html  package-lock.json  package.json  vite.config.js
demos/hello-vue-vite/src/: App.vue  main.js
demos/hello-vue/src/: App.vue  main.js  polyfill.js
demos/hello-vue/src/components/: HelloWorld.vue
demos/hello-vue/src/views/: about.vue  home.vue  kraken.vue  vue.vue
integration/playground/: README.md  pubspec.yaml
integration/playground/android/: build.gradle
integration/playground/android/app/: build.gradle
integration/playground/ios/Runner/: Info.plist
integration/playground/ios/Runner.xcodeproj/: project.pbxproj
integration/playground/lib/: kraken.dart  main.dart  qr.dart
integration/playground/macos/Flutter/: GeneratedPluginRegistrant.swift
integration/playground/macos/Runner.xcodeproj/: project.pbxproj
integration/playground/plugins/qr_code_scanner/: README.md  pubspec.yaml
integration/playground/test/: widget_test.dart
my_kraken_plugin/: pubspec.yaml
my_kraken_plugin/android/: build.gradle
my_kraken_plugin/bridge/: .gitignore
my_kraken_plugin/example/: pubspec.yaml
my_kraken_plugin/example/android/app/: build.gradle
my_kraken_plugin/example/ios/Runner/: Info.plist
my_kraken_plugin/example/macos/Flutter/: GeneratedPluginRegistrant.swift
my_kraken_plugin/example/test/: widget_test.dart
my_kraken_plugin/ios/: my_kraken_plugin.podspec
my_kraken_plugin/ios/Classes/: MyKrakenPlugin.h  MyKrakenPlugin.m
my_kraken_plugin/lib/: alarm_clock_module.dart  my_kraken_plugin.dart  platform.dart
my_kraken_plugin/macos/: libmy_kraken_plugin_jsc.dylib  my_kraken_plugin.podspec
plugins/my_kraken_plugin/: .gitignore  README.md  pubspec.yaml
plugins/my_kraken_plugin/android/: settings.gradle
plugins/my_kraken_plugin/bridge/: CMakeLists.txt  my_plugin.js
plugins/my_kraken_plugin/bridge/kraken/: include  third_party
plugins/my_kraken_plugin/bridge/kraken/lib/android/: jniLibs
plugins/my_kraken_plugin/bridge/kraken/lib/ios/: kraken_bridge.xcframework
plugins/my_kraken_plugin/bridge/kraken/lib/macos/: libkraken.dylib  libkraken_jsc.dylib
plugins/my_kraken_plugin/example/: README.md
plugins/my_kraken_plugin/example/assets/: bundle.js
plugins/my_kraken_plugin/example/lib/: main.dart
plugins/my_kraken_plugin/ios/: libmy_kraken_plugin_jsc.dylib  my_kraken_plugin.podspec
plugins/my_kraken_plugin/lib/: alarm_clock_module.dart  my_kraken_plugin.dart  my_plugin_qjsc.dart
plugins/my_kraken_plugin/macos/: libmy_kraken_plugin.dylib
plugins/my_kraken_plugin/test/: my_kraken_plugin_test.dart
(+22 files in other folders)
